# JMCP

./: AGENT_CHAT.md  AGENT_WORK_PLAN.md  Cargo.toml  Justfile  MOCK_TEST_PROOF.md  README.md  deny.toml
.agents/workflows/: jankurai-audit.md  jankurai-repair-plan.md
.github/workflows/: ci.yml  jankurai.yml  security.yml
.jeryu/: backup.toml  ci.toml  policy.toml  repo.toml
agent/: JANKURAI_STANDARD.md  audit-policy.toml  cost-budget.toml  generated-zones.toml  jankurai-install.toml  owner-map.json  owner-notes.md  proof-lanes.toml  repo-score-baseline.json  repo-score.md  test-map.json  tool-adoption.toml
agent/baselines/: README.md
agent/zyal/: cache-reduction-validity-check.zyal  harden-jekko-with-jailgun.zyal  repo-bank-bug-scan.zyal
apps/api/: AGENTS.md
apps/cockpit/: DECK_SESSION_PROOF.md
apps/cockpit/src/: App.test.tsx  main.tsx  styles-deck.css  views.tsx  voice-assistant.test.ts
apps/cockpit/src/hooks/: useVoiceAssistant.ts
apps/cockpit/src/jitux/: client.ts  guards.ts  queueBlockerFrames.ts  reducer.test.ts  session-channel.ts  (+2 more)
apps/jmcp-tui/: Cargo.toml
apps/jmcp-tui/src/: main.rs
apps/jmcpctl/: Cargo.toml
apps/jmcpctl/src/: doctor.rs  main.rs  telegram.rs  voice_demo.rs
apps/jmcpd/: Cargo.toml
apps/jmcpd/src/: dispatch_loop.rs  main.rs  telegram_helpers.rs  tests.rs  voice_approval.rs  voice_runtime.rs
contracts/: README.md
contracts/events/: README.md  jcp-envelope.schema.json
crates/adapters/: AGENTS.md
crates/application/: AGENTS.md
crates/domain/: AGENTS.md
crates/jcp-core/: Cargo.toml
crates/jcp-core/src/: lib.rs  tests.rs
crates/jcp-core/tests/: envelope_roundtrip.rs  red_team.rs
crates/jmcp-adapter-jailgun/: Cargo.toml
crates/jmcp-adapter-jailgun/src/: cli.rs  evidence.rs  http_ingest.rs  jailgun_tests.rs  lib.rs  main.rs  model.rs  protocol.rs  review_packet.rs
crates/jmcp-adapter-jankurai/: Cargo.toml
crates/jmcp-adapter-jankurai/src/: lib.rs  main.rs
crates/jmcp-adapter-jekko/: Cargo.toml
crates/jmcp-adapter-jekko/src/: config.rs  lib.rs  main.rs  tests.rs  worker_run.rs  worker_run_tests.rs  zyal.rs  zyal_runner.rs  zyal_status.rs  zyal_tests.rs
crates/jmcp-adapter-jekko/tests/: worker_outcome_mapping.rs
crates/jmcp-adapter-jeryu/: Cargo.toml
crates/jmcp-adapter-jeryu/src/: ecosystem.rs  lib.rs  main.rs  repos.rs  tests.rs
crates/jmcp-adapter-jeryu/tests/: ci_evidence_mapping.rs
crates/jmcp-adapter-sdk/: Cargo.toml
crates/jmcp-adapter-sdk/src/: lib.rs
crates/jmcp-adapter-speech/: Cargo.toml
crates/jmcp-adapter-speech/src/: lib.rs  speech_tests.rs
crates/jmcp-api/: Cargo.toml
crates/jmcp-api/src/: jitux.rs  jitux_tests.rs  lib.rs  routes.rs  routes_actions.rs  routes_approvals.rs  routes_extra.rs  tests.rs  universe.rs  universe_helpers.rs
crates/jmcp-api/tests/: jitux_session_mock.rs
crates/jmcp-app/: Cargo.toml
crates/jmcp-app/src/: approval_flow.rs  autonomous_actions.rs  control_plane.rs  control_plane_samples.rs  dispatch.rs  dispatch_tests.rs  lib.rs  microtasks.rs  runtime_health.rs  tests.rs
crates/jmcp-app/src/microtasks/: input_selection.rs
crates/jmcp-approval-telegram/: Cargo.toml
crates/jmcp-approval-telegram/src/: config.rs  lib.rs  tests.rs  voice.rs  voice_client_tests.rs
crates/jmcp-attention/: Cargo.toml
crates/jmcp-attention/src/: lib.rs
crates/jmcp-conformance/: Cargo.toml
crates/jmcp-conformance/src/: lib.rs
crates/jmcp-conformance/tests/: jcp_v1.rs
crates/jmcp-domain/: Cargo.toml
crates/jmcp-domain/src/: approvals.rs  control.rs  errors.rs  jitux.rs  jitux_tests.rs  lib.rs  tests.rs
crates/jmcp-now/: Cargo.toml  PROOF.md
crates/jmcp-now/src/: contract.rs  lib.rs  projection.rs  ranking.rs  reads.rs
crates/jmcp-now/src/scenes/: mod.rs  queue_blockers.rs
crates/jmcp-now/src/scenes/queue_blockers/: actions.rs  signals.rs
crates/jmcp-now/tests/: jitux_golden.rs  mock_support.rs  queue_blockers.rs  ranking_mock.rs  scene_mock.rs
crates/jmcp-now/tests/golden/: queue_blockers_scene.json  scene.schema.json
crates/jmcp-store/: Cargo.toml
crates/jmcp-store/src/: lib.rs  projection.rs  replay.rs  store_queries.rs  tests.rs
crates/workers/: AGENTS.md
docs/: agent-native-standard.md  architecture.md  audit-rubric.md  boundaries.md  dev-on-mac.md  generated-zones.md  ide-integrations.md  install.md  protocol-decisions.md  release-process.md  release.md  security.md  voice-assistant.md
docs/architecture/: README.md
ops/: AGENTS.md
ops/ci/: ci.sh  common.sh  conformance.sh  contract-drift.sh  cost-budget.sh  fast.sh  jankurai-local.sh  jankurai-ratchet.sh  jankurai.sh  language-bad-behavior.sh  pr-ci.sh  publish-main.sh  release-readiness.sh  security.sh
ops/git-hooks/: pre-commit  pre-push  score-guard.sh
paper/: jmcp-v1-architecture-security-reproducibility.tex
python/ai-service/: AGENTS.md
schemas/: repair-queue.schema.json
schemas/jcp/1.0.0/: jcp.schema.json
schemas/jitux/1.0.0/: jitux-frame.schema.json
schemas/jpcm/1.0.0/: jpcm.schema.json
scripts/: ci-doctor.sh  ci-local.sh  verify-jmcp-env.sh
scripts/dev/: stop-jmcp-dev.sh
services/llm/: .gitignore  README.md  benchmark-omni.py  dedicate-gpu.sh  realtime-voice.sh  requirements-llm.txt  run-llm.sh  setup-omni.sh
services/speech/: README.md  asr_sidecar.py  requirements-asr.txt  requirements-tts.txt  run-asr.sh  run-tts.sh  selftest.sh  telegram_voice_demo.py  tts_sidecar.py
tips/aiux/: tip1.txt  tip2.txt  tip3.txt  tip4.txt
tips/aiux/v2/: tip1.txt  tip2.txt  tip3.txt  tip4.txt
tips/v6/: JMCP_FINAL_CRITIQUE_SCORECARD(1).md  JMCP_FINAL_ENGINEERING_SPEC(1).md  JMCP_FINAL_ENGINEERING_SPEC(3).md  JMCP_FINAL_ENGINEERING_SPEC(4).md  JMCP_FINAL_Engineering_Spec.md  JMCP_FINAL_IEEE_PAPER(1).tex  JMCP_FINAL_IEEE_PAPER(2).tex  JMCP_FINAL_IEEE_Paper.tex  JMCP_FINAL_WHITEPAPER_IEEE.tex  JMCP_FINAL_critique_scores.md  JMCP_FINAL_engineering_spec(2).md  JMCP_FINAL_ieee_whitepaper.tex  JMCP_FINAL_jpcm_1_0_0.schema.json  JPCM_PROTOCOL_V1_SCHEMA.json  jpcm_1_0_0_protocol.schema.json
tools/: security-lane.sh
tools/jankurai-hooks/: pre-commit  pre-push
(+8 files in other folders)
