[workspace]
members = [
    "crates/jcp-core",
    "crates/jmcp-domain",
    "crates/jmcp-store",
    "crates/jmcp-attention",
    "crates/jmcp-app",
    "crates/jmcp-api",
    "crates/jmcp-adapter-sdk",
    "crates/jmcp-adapter-jankurai",
    "crates/jmcp-adapter-jailgun",
    "crates/jmcp-adapter-jeryu",
    "crates/jmcp-adapter-jekko",
    "crates/jmcp-approval-telegram",
    "crates/jmcp-conformance",
    "apps/jmcpd",
    "apps/jmcpctl",
    "apps/jmcp-tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = "2"
getrandom = "0.2"
hex = "0.4"
ratatui = "0.26"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
