[package]
name = "jmcpctl"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
jcp-core = { path = "../../crates/jcp-core" }
jmcp-approval-telegram = { path = "../../crates/jmcp-approval-telegram" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
