[package]
name = "jmcpd"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
jcp-core = { path = "../../crates/jcp-core" }
jmcp-api = { path = "../../crates/jmcp-api" }
jmcp-app = { path = "../../crates/jmcp-app" }
jmcp-approval-telegram = { path = "../../crates/jmcp-approval-telegram" }
jmcp-store = { path = "../../crates/jmcp-store" }
serde_json.workspace = true
tokio.workspace = true
