[package]
name = "jcp-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
