[package]
name = "jmcp-adapter-jankurai"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
jmcp-adapter-sdk = { path = "../jmcp-adapter-sdk" }
jmcp-domain = { path = "../jmcp-domain" }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
uuid.workspace = true
