[package]
name = "jmcp-adapter-jekko"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jmcp-adapter-sdk = { path = "../jmcp-adapter-sdk" }
jmcp-domain = { path = "../jmcp-domain" }
serde_json.workspace = true
tokio.workspace = true
