[package]
name = "jmcp-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
jcp-core = { path = "../jcp-core" }
jmcp-attention = { path = "../jmcp-attention" }
jmcp-domain = { path = "../jmcp-domain" }
jmcp-store = { path = "../jmcp-store" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
