[package]
name = "jmcp-approval-telegram"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
jmcp-domain = { path = "../jmcp-domain" }
reqwest = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true }
