[package]
name = "jmcp-now"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
arc-swap.workspace = true
chrono.workspace = true
jmcp-app = { path = "../jmcp-app" }
jmcp-domain = { path = "../jmcp-domain" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
jmcp-store = { path = "../jmcp-store" }
