[package]
name = "jmcp-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
jmcp-domain = { path = "../jmcp-domain" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
